# EigenRand

./: .gitignore  Benchmark.vcxproj  Benchmark.vcxproj.filters  BenchmarkDiscrete.vcxproj  BenchmarkMv.vcxproj  BenchmarkMv.vcxproj.filters  BenchmarkVectorizeOverParams.vcxproj  CMakeLists.txt  CMakePresets.json  EigenRand.sln  EigenRand.vcxproj  EigenRand.vcxproj.filters  README.md  TestAccuracy.vcxproj  TestAccuracy.vcxproj.filters  test_eigen_rand.cpp
.github/workflows/: generate_docs.yml  pull_request_test.yml  pull_request_test_non_x64.yml  release.yml
EigenRand/: Core.h  CwiseHeteroBinaryOp.h  EigenRand  Macro.h  MorePacketMath.h  PacketFilter.h  PacketRandomEngine.h  RandUtils.h  doc.h
EigenRand/Dists/: Basic.h  Discrete.h  GammaPoisson.h  NormalExp.h  Truncated.h
EigenRand/MvDists/: Multinomial.h  MvNormal.h  TruncMvNormal.h
EigenRand/arch/AVX/: MorePacketMath.h  PacketFilter.h  RandUtils.h
EigenRand/arch/AVX512/: MorePacketMath.h  PacketFilter.h  RandUtils.h
EigenRand/arch/NEON/: MorePacketMath.h  PacketFilter.h  RandUtils.h
EigenRand/arch/SSE/: MorePacketMath.h  PacketFilter.h  RandUtils.h
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  EigenRand-accuracy  EigenRand-benchmark  EigenRand-benchmark_disc  EigenRand-benchmark_mv  EigenRand-benchmark_vectorize_over_params  Makefile  cmake_install.cmake
_codeql_build_dir/test/: CTestTestfile.cmake  EigenRand-test  Makefile  cmake_install.cmake
benchmark/: accuracy.cpp  benchmark.cpp  benchmark_disc.cpp  benchmark_mv.cpp  benchmark_vectorize_over_params.cpp  utils.hpp
doxygen/: Doxyfile  footer.html  header.html
test/: CMakeLists.txt  accuracy.cpp  benchmark.cpp  benchmark_mv.cpp  comp_scipy.py  issue30.cpp  packages.config  test.cpp  test.vcxproj  test_mv.cpp
test/Multivariate/normal/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mp  src.cpp
